--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>B10A1</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body class="azeret-mono-normal">
+    <header class="header">
+      <div class="banner-content">
+        <img src="./assets/Group.png" alt="" />
+        <h1 class="text-primary">
+          "In the near future, I hope to become a Developer."
+        </h1>
+        <p class="section-description">
+          Shot what able cold new see hold.Friendly as an betrayed formerly he.
+          Morning because as to society behaved moments.
+        </p>
+        <button class="btn-primary">Contact with Me</button>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
