causes section added

--- a/index.html
+++ b/index.html
@@ -21,13 +21,60 @@
           "In the near future, I hope to become a Developer."
         </h1>
         <p class="section-description">
-          Shot what able cold new see hold.Friendly as an betrayed formerly he.
-          Morning because as to society behaved moments.
+          Transforming ideas into reality through innovative software solutions
+          that enhance user experiences and drive technological advancement
         </p>
         <button class="btn-primary">Contact with Me</button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="causes">
+        <h2 class="section-title">Why Web Development??</h2>
+        <p class="section-description">
+          I am a Web Developer, and I love what I do
+        </p>
+
+        <div class="cause">
+          <div class="content">
+            <h4 class="text-secondary">
+              I will Do Coding and Change The World
+            </h4>
+            <p class="section-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <button class="btn-secondary">Learn More</button>
+          </div>
+          <img src="./assets/Group 4.png" alt="" />
+        </div>
+        <div class="cause-2">
+          <img src="./assets/Group 3.png" alt="" />
+          <div class="content">
+            <h4 class="text-secondary">
+              I will help People by creating Modern Web System
+            </h4>
+            <p class="section-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <button class="btn-secondary">Learn More</button>
+          </div>
+        </div>
+        <div class="cause">
+          <div class="content">
+            <h4 class="text-secondary">
+              I will Do Coding and Change The World
+            </h4>
+            <p class="section-description">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <button class="btn-secondary">Learn More</button>
+          </div>
+          <img src="./assets/Group 4.png" alt="" />
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
