inspiration section added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
     </header>
     <main>
+      <!-- causes section  -->
       <section class="causes">
         <h2 class="section-title">Why Web Development??</h2>
         <p class="section-description">
@@ -73,6 +74,19 @@
           </div>
           <img src="./assets/Group 4.png" alt="" />
         </div>
+      </section>
+      <!-------------- inspiration section  ------------->
+      <div>
+        <section class="inspiration">
+          <h2 class="section-title">My Inspiration</h2>
+          <p class="section-description">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+          <div>
+            <video controls src=""><iframe width="560" height="315" src="https://www.youtube.com/embed/Vm4tx1O9GAc?si=wv4SNAKp6wJIUVo5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></video>
+          </div>
+      </div>
       </section>
     </main>
     <footer></footer>
