video section added

--- a/index.html
+++ b/index.html
@@ -76,17 +76,27 @@
         </div>
       </section>
       <!-------------- inspiration section  ------------->
-      <div>
-        <section class="inspiration">
+
+      <section class="inspiration">
+        <div>
           <h2 class="section-title">My Inspiration</h2>
           <p class="section-description">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text.
           </p>
-          <div>
-            <video controls src=""><iframe width="560" height="315" src="https://www.youtube.com/embed/Vm4tx1O9GAc?si=wv4SNAKp6wJIUVo5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></video>
+          <div class="video">
+            <iframe
+              width="100%"
+              height="600px"
+              src="https://www.youtube.com/embed/Vm4tx1O9GAc?si=wv4SNAKp6wJIUVo5"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
           </div>
-      </div>
+        </div>
       </section>
     </main>
     <footer></footer>
